# typewriter

./: README.md  pyproject.toml
typewriter/: config.toml  main.py
