[tool.poetry]
name = "typewriter"
version = "0.1.0"
description = "Typewriter on steroids. Hotkeys binding for correction and translation with the help of LLM"
authors = ["Kim Choy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pynput = "^1.7.6"
pyperclip = "^1.8.2"
ipdb = "^0.13.13"
rich = "^13.7.1"
openai = "^1.23.6"
levenshtein = "^0.25.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
