[project]
name = "typewriter"
version = "0.1.0"
description = "Typewriter on steroids. Hotkeys binding for correction and translation with the help of LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipdb>=0.13.13",
    "pynput>=1.7.7",
    "pyperclip>=1.9.0",
    "rich>=13.7.1",
    "openai>=1.42.0",
    "levenshtein>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
